Sun Jan 27 21:04:19 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Check for NULL socket pointer in the function
	  silc_server_packet_send_to_channel_real.  Affected file
	  silcd/packet_send.c.

	* Fixed the BAN notify handling to correctly remove ban
	  list.  Affected file silcd/packet_receive.c.

Sat Jan 26 23:01:03 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed some header addition to Toolkit distribution in
	  lib/silcutil/Makefile.am and lib/trq/Makefile.am.

	* Added lib/silcclient/client_ops_example.h as an template
	  file for application programmers to quickly start using
	  the SilcClientOperation functions in their application.
	  Updated the lib/silcclient/README as well to tell about this
	  nice file made available.

Sat Jan 26 10:45:41 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Call silc_server_remove_from_channels when removing client
	  entry when NO_SUCH_CLIENT_ID was received.  Affected file
	  is silcd/command_reply.c.

Fri Jan 25 19:12:36 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added server & router operator statistics updating.  Affected
	  file silcd/packet_receive.c and silcd/command.c.

	* Fixed the SERVER_SIGNOFF notify handling on normal server
	  not to save the history information for clients.  Same was
	  fixed earlier in remove_clients_by_server function, but not
	  here.  Affected file silcd/packet_receive.c.

	* Raised the default connection-retry count from 4 to 7 in
	  server.  Affected file silcd/server.h.

	* Cancel any possible reconnect timeouts when we start the
	  key exchange.  Affected file silcd/server.c.

	* Do not reconnect on connection failure when SCONNECT was
	  given.  Affected files silcd/server.[ch].

Tue Jan 22 18:19:36 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Removed assert()'s from the lib/silcclient/client_keyagr.c.

	* Fixed the NICK command to always give the unformatted
	  nickname to the one giving the NICK command.  If unformatted